--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,12 +4,17 @@
     "version": "0.0.1",
     "manifest_version": 3,
     "background": {
-        "service_worker": "./background.js"
+        "service_worker": "./background.js",
+        "type": "module"
     },
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
-            "js": ["contentScript.js"]
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "contentScript.js"
+            ]
         }
     ],
     "options_page": "./misc/options.html",
@@ -23,5 +28,7 @@
         "storage",
         "scripting"
     ],
-    "host_permissions": ["<all_urls>"]
+    "host_permissions": [
+        "<all_urls>"
+    ]
 }
