Add new optional property when to be execute contentScript.js and add alarms

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,7 +14,8 @@
             ],
             "js": [
                 "contentScript.js"
-            ]
+            ],
+            "run_at": "document_idle"
         }
     ],
     "options_page": "./misc/options.html",
@@ -26,7 +27,8 @@
         "activeTab",
         "tabs",
         "storage",
-        "scripting"
+        "scripting",
+        "alarms"
     ],
     "host_permissions": [
         "<all_urls>"
