--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -47,19 +47,6 @@
 		"alarms"
 	],
 	"host_permissions": [
-		"*://*.amazon.com/*",
-		"*://*.amazon.co.jp/*",
-		"*://*.amazon.co.uk/*",
-		"*://*.amazon.de/*",
-		"*://*.amazon.fr/*",
-		"*://*.amazon.ca/*",
-		"*://*.amazon.es/*",
-		"*://*.amazon.it/*",
-		"*://*.amazon.com.be/*",
-		"*://*.amazon.nl/*",
-		"*://*.amazon.pl/*",
-		"*://*.amazon.se/*",
-		"*://*.amazon.com.mx/*",
-		"*://*.amazon.com.br/*"
+		"<all_urls>"
 	]
 }
