--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "base64url": "^3.0.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.2",
     "cookie-parser": "^1.4.6",
